# Power-Disparity-Predictor-Real-time-Energy-Consumption-Variance-Analysis

./: .gitignore  API_REFERENCE.md  AUDIT_REPORT.md  DATA_SOURCE_FLEXIBILITY.md  FRONTEND.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MODEL_POSITIONING.md  POWER_DISPARITY_RESULTS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RESULTS_SUMMARY.txt  SETUP.md  SYSTEM_ARCHITECTURE.md  ai_energy_analyst.py  alert_recommendation_system.py  app.py  config.py  consolidate_appliances.py  consolidate_data.py  dashboard.html  data_ingestion_agent.py  demo.py  demo_waste_detection.py  energy_waste_reasoning.py  learning_adaptation_agent.py  pattern_analysis_agent.py  pyproject.toml  query_appliances_db.py  query_db.py  requirements.txt  serve_model.py  serve_waste_detection.py  smart_meter_data.csv  train_and_save_model.py  train_disparity.py  train_energy.py  (+4 more)
fronnte/: App.tsx  index.html  metadata.json  package-lock.json  package.json  types.ts
fronnte/components/: Header.tsx  Sidebar.tsx
fronnte/pages/: BatchPrediction.tsx  Catalog.tsx  Dashboard.tsx  Docs.tsx  Insights.tsx
frontend/: App.tsx  README.md  constants.tsx  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts
frontend/components/: Footer.tsx  Navbar.tsx
frontend/pages/: Blog.tsx  (+5 more)
models/: feature_names.json  feature_names.pkl  feature_scaler.pkl  label_encoders.pkl  model_metadata.json  model_metadata.txt  power_disparity_model.pkl  xgb_energy_model.pkl
research/: comprehensive_disparity_analysis.py  predict_power_disparity.py
(+16 files in other folders)
